--- a/archive/notebook-v4.ipynb
+++ b/archive/notebook-v4.ipynb
@@ -30413,11 +30413,23 @@
     "    df=df.with_columns(month=pl.col('SALES_DATE').dt.month())\n",
     "    return df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import polars as pl\n",
+    "df=pl.read_parquet('../data/Irrigation.parquet')\n",
+    "df=df.with_columns(pl.col('`Act Orders Rev','`Fcst Stat Prelim Rev').cast(pl.Float32))\n",
+    "df.write_parquet('../data/Irrigation.parquet')"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fcst",
+   "display_name": "py313",
    "language": "python",
    "name": "python3"
   },
@@ -30431,7 +30443,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
