--- a/archive/notebook.ipynb
+++ b/archive/notebook.ipynb
@@ -30704,7 +30704,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fcst",
+   "display_name": "py313",
    "language": "python",
    "name": "python3"
   },
@@ -30718,7 +30718,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
