added extracting timeseries feature

--- a/archive/nhits.ipynb
+++ b/archive/nhits.ipynb
@@ -32,6 +32,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "039bf04c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import polars as pl\n",
+    "df = pl.read_parquet(\"C:\\\\Users\\\\smishra14\\\\setup\\\\repos\\\\fcst\\\\data\\\\Orthopaedic Instruments.parquet\")\n",
+    "df=df.drop('NHITS')\n",
+    "df.write_parquet(\"C:\\\\Users\\\\smishra14\\\\setup\\\\repos\\\\fcst\\\\data\\\\Orthopaedic Instruments.parquet\")\n",
+    "#df.filter(pl.col('NHITS')>99999)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8dda3f50",
    "metadata": {},
    "outputs": [],
