enhanced clustering and forecasting pipeline

--- a/archive/segment.ipynb
+++ b/archive/segment.ipynb
@@ -658,11 +658,98 @@
     "    ff=pl.concat([ff,dff],how='diagonal_relaxed')\n",
     "ff.write_csv(\"analysis.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "c4da7192",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (9, 28)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>statistic</th><th>Selling Division</th><th>Area</th><th>Stryker Group Region</th><th>Region</th><th>Country</th><th>CatalogNumber</th><th>Business Sector</th><th>Business Unit</th><th>Franchise</th><th>Product Line</th><th>IBP Level 5</th><th>IBP Level 6</th><th>IBP Level 7</th><th>SALES_DATE</th><th>UOM</th><th>Pack Content</th><th>`L0 ASP Final Rev</th><th>`Act Orders Rev</th><th>Act Orders Rev Val</th><th>L2 DF Final Rev</th><th>L1 DF Final Rev</th><th>L0 DF Final Rev</th><th>L2 Stat Final Rev</th><th>`Fcst DF Final Rev</th><th>`Fcst Stat Final Rev</th><th>`Fcst Stat Prelim Rev</th><th>Fcst DF Final Rev Val</th></tr><tr><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td></tr></thead><tbody><tr><td>&quot;count&quot;</td><td>&quot;734160&quot;</td><td>&quot;734160&quot;</td><td>&quot;734160&quot;</td><td>&quot;734160&quot;</td><td>&quot;734160&quot;</td><td>&quot;734160&quot;</td><td>&quot;734160&quot;</td><td>&quot;734160&quot;</td><td>&quot;734160&quot;</td><td>&quot;734160&quot;</td><td>&quot;734160&quot;</td><td>&quot;734160&quot;</td><td>&quot;734160&quot;</td><td>&quot;734160&quot;</td><td>734160.0</td><td>734160.0</td><td>594965.0</td><td>205935.0</td><td>205137.0</td><td>467487.0</td><td>564335.0</td><td>565647.0</td><td>458528.0</td><td>305900.0</td><td>251045.0</td><td>242777.0</td><td>734160.0</td></tr><tr><td>&quot;null_count&quot;</td><td>&quot;0&quot;</td><td>&quot;0&quot;</td><td>&quot;0&quot;</td><td>&quot;0&quot;</td><td>&quot;0&quot;</td><td>&quot;0&quot;</td><td>&quot;0&quot;</td><td>&quot;0&quot;</td><td>&quot;0&quot;</td><td>&quot;0&quot;</td><td>&quot;0&quot;</td><td>&quot;0&quot;</td><td>&quot;0&quot;</td><td>&quot;0&quot;</td><td>0.0</td><td>0.0</td><td>139195.0</td><td>528225.0</td><td>529023.0</td><td>266673.0</td><td>169825.0</td><td>168513.0</td><td>275632.0</td><td>428260.0</td><td>483115.0</td><td>491383.0</td><td>0.0</td></tr><tr><td>&quot;mean&quot;</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>&quot;2025-02-14 12:47:59.999999&quot;</td><td>0.988121</td><td>1.077803</td><td>969.030499</td><td>36.945133</td><td>13009.980796</td><td>30.314416</td><td>25.154556</td><td>25.005851</td><td>29.740354</td><td>22.258892</td><td>27.22214</td><td>27.55798</td><td>3525.598852</td></tr><tr><td>&quot;std&quot;</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>0.097875</td><td>1.095921</td><td>1773.848025</td><td>191.638396</td><td>65359.091245</td><td>182.161462</td><td>166.960894</td><td>167.7697</td><td>177.159653</td><td>167.118273</td><td>181.95925</td><td>180.254423</td><td>40291.481297</td></tr><tr><td>&quot;min&quot;</td><td>&quot;CMF&quot;</td><td>&quot;United States&quot;</td><td>&quot;UNITED STATES&quot;</td><td>&quot;United States&quot;</td><td>&quot;UNITED STATES&quot;</td><td>&quot;0011201&quot;</td><td>&quot;Orthopaedics and Spine&quot;</td><td>&quot;Trauma&quot;</td><td>&quot;Trauma and Extremities&quot;</td><td>&quot;External Fixation&quot;</td><td>&quot;4FUSION&quot;</td><td>&quot;115 TR&quot;</td><td>&quot;0.3 SPLIT FREEZE-DRIED TRAD ST…</td><td>&quot;2022-09-01 00:00:00&quot;</td><td>0.01</td><td>1.0</td><td>-24656.16</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>-3206.3</td></tr><tr><td>&quot;25%&quot;</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>&quot;2023-12-01 00:00:00&quot;</td><td>1.0</td><td>1.0</td><td>146.53509</td><td>1.0</td><td>407.41</td><td>0.296415</td><td>0.0</td><td>0.0</td><td>0.312807</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr><tr><td>&quot;50%&quot;</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>&quot;2025-03-01 00:00:00&quot;</td><td>1.0</td><td>1.0</td><td>401.0</td><td>4.0</td><td>1981.0</td><td>2.345941</td><td>1.219896</td><td>1.078099</td><td>2.379283</td><td>0.090928</td><td>1.0</td><td>1.0</td><td>0.0</td></tr><tr><td>&quot;75%&quot;</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>&quot;2026-05-01 00:00:00&quot;</td><td>1.0</td><td>1.0</td><td>1467.0</td><td>16.0</td><td>7695.48</td><td>10.358045</td><td>7.320674</td><td>7.0</td><td>10.276866</td><td>4.484278</td><td>7.105101</td><td>7.590663</td><td>0.0</td></tr><tr><td>&quot;max&quot;</td><td>&quot;SUSTAINABILITY&quot;</td><td>&quot;United States&quot;</td><td>&quot;UNITED STATES&quot;</td><td>&quot;United States&quot;</td><td>&quot;UNITED STATES&quot;</td><td>&quot;XSEXF010101&quot;</td><td>&quot;Orthopaedics and Spine&quot;</td><td>&quot;Trauma&quot;</td><td>&quot;Trauma and Extremities&quot;</td><td>&quot;Trauma Biologics&quot;</td><td>&quot;XPRESS DR AND UDR&quot;</td><td>&quot;XPRESS INSTRUMENTS- Obs&quot;</td><td>&quot;XPRESS DR AND UDR INSTRUMENT K…</td><td>&quot;2027-08-01 00:00:00&quot;</td><td>1.0</td><td>100.0</td><td>75855.6068</td><td>6731.0</td><td>4.1151e6</td><td>8538.24313</td><td>8538.24313</td><td>9135.920149</td><td>7222.901113</td><td>9135.920149</td><td>7389.012162</td><td>7389.012162</td><td>5.5486e6</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (9, 28)\n",
+       "┌───────────┬───────────┬───────────┬───────────┬───┬───────────┬───────────┬───────────┬──────────┐\n",
+       "│ statistic ┆ Selling   ┆ Area      ┆ Stryker   ┆ … ┆ `Fcst DF  ┆ `Fcst     ┆ `Fcst     ┆ Fcst DF  │\n",
+       "│ ---       ┆ Division  ┆ ---       ┆ Group     ┆   ┆ Final Rev ┆ Stat      ┆ Stat      ┆ Final    │\n",
+       "│ str       ┆ ---       ┆ str       ┆ Region    ┆   ┆ ---       ┆ Final Rev ┆ Prelim    ┆ Rev Val  │\n",
+       "│           ┆ str       ┆           ┆ ---       ┆   ┆ f64       ┆ ---       ┆ Rev       ┆ ---      │\n",
+       "│           ┆           ┆           ┆ str       ┆   ┆           ┆ f64       ┆ ---       ┆ f64      │\n",
+       "│           ┆           ┆           ┆           ┆   ┆           ┆           ┆ f64       ┆          │\n",
+       "╞═══════════╪═══════════╪═══════════╪═══════════╪═══╪═══════════╪═══════════╪═══════════╪══════════╡\n",
+       "│ count     ┆ 734160    ┆ 734160    ┆ 734160    ┆ … ┆ 305900.0  ┆ 251045.0  ┆ 242777.0  ┆ 734160.0 │\n",
+       "│ null_coun ┆ 0         ┆ 0         ┆ 0         ┆ … ┆ 428260.0  ┆ 483115.0  ┆ 491383.0  ┆ 0.0      │\n",
+       "│ t         ┆           ┆           ┆           ┆   ┆           ┆           ┆           ┆          │\n",
+       "│ mean      ┆ null      ┆ null      ┆ null      ┆ … ┆ 22.258892 ┆ 27.22214  ┆ 27.55798  ┆ 3525.598 │\n",
+       "│           ┆           ┆           ┆           ┆   ┆           ┆           ┆           ┆ 852      │\n",
+       "│ std       ┆ null      ┆ null      ┆ null      ┆ … ┆ 167.11827 ┆ 181.95925 ┆ 180.25442 ┆ 40291.48 │\n",
+       "│           ┆           ┆           ┆           ┆   ┆ 3         ┆           ┆ 3         ┆ 1297     │\n",
+       "│ min       ┆ CMF       ┆ United    ┆ UNITED    ┆ … ┆ 0.0       ┆ 0.0       ┆ 0.0       ┆ -3206.3  │\n",
+       "│           ┆           ┆ States    ┆ STATES    ┆   ┆           ┆           ┆           ┆          │\n",
+       "│ 25%       ┆ null      ┆ null      ┆ null      ┆ … ┆ 0.0       ┆ 0.0       ┆ 0.0       ┆ 0.0      │\n",
+       "│ 50%       ┆ null      ┆ null      ┆ null      ┆ … ┆ 0.090928  ┆ 1.0       ┆ 1.0       ┆ 0.0      │\n",
+       "│ 75%       ┆ null      ┆ null      ┆ null      ┆ … ┆ 4.484278  ┆ 7.105101  ┆ 7.590663  ┆ 0.0      │\n",
+       "│ max       ┆ SUSTAINAB ┆ United    ┆ UNITED    ┆ … ┆ 9135.9201 ┆ 7389.0121 ┆ 7389.0121 ┆ 5.5486e6 │\n",
+       "│           ┆ ILITY     ┆ States    ┆ STATES    ┆   ┆ 49        ┆ 62        ┆ 62        ┆          │\n",
+       "└───────────┴───────────┴───────────┴───────────┴───┴───────────┴───────────┴───────────┴──────────┘"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import polars as pl\n",
+    "df=pl.read_parquet(r\"C:\\Users\\smishra14\\setup\\repos\\fcst\\data\\Trauma.parquet\")\n",
+    "df.describe()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69a5a072",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=pl.read_parquet(r\"C:\\Users\\smishra14\\setup\\repos\\fcst\\data\\Sterishield.parquet\")\n",
+    "df=df.with_columns(cluster=pl.col('cluster').cast(pl.Utf8))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5e9bfbc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=df.sort('SALES_DATE').with_columns(cluster=pl.col(\"cluster\").forward_fill().backward_fill().over(\"unique_id\")).describe()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "49384c8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.write_parquet(r\"C:\\Users\\smishra14\\setup\\repos\\fcst\\data\\Sterishield.parquet\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py312",
+   "display_name": "py313",
    "language": "python",
    "name": "python3"
   },
@@ -676,7 +763,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
